# funds-manager

./: .gitignore  .gitleaksignore  .spelling  Makefile  README.md  SECURITY.md  SPEC.md  TECH_SPEC.md  WD_Auto_Transfer_Safe_to_EOA.docx  generate_wd.py  pyproject.toml  tox.ini
.github/workflows/: common_checks.yaml  release.yaml
