[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "funds-manager"
version = "0.1.0"
description = ""
authors = [
]
readme = "README.md"
repository = "https://github.com/valory-xyz/funds-manager"
keywords = [
    "funds",
    "autonomy",
    "autonomous",
    "autonolas",
    "service",
    "multi",
    "agent",
    "connection",
]
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: System",
]
[[tool.poetry.packages]]
include = "packages"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
open-autonomy = "==0.21.13"
requests = ">=2.28.1,<2.33.0"
py-multibase = "==1.0.3"
py-multicodec = "==0.2.1"
py-eth-sig-utils = "*"
grpcio = "==1.78.0"
asn1crypto = "<1.5.0,>=1.4.0"
open-aea-ledger-ethereum = "==2.1.0"
open-aea-ledger-cosmos = "==2.1.0"
protobuf = ">=5,<6"
hypothesis = "==6.21.6"
open-aea-test-autonomy = "==0.21.13"
web3 = "<8,>=7.0.0"
w3multicall = ">=0.3.1"
ipfshttpclient = "==0.8.0a2"
open-aea-cli-ipfs = "==2.1.0"
aiohttp = "<4.0.0,>=3.8.5"
certifi = "*"
multidict = "*"
ecdsa = ">=0.15"
eth_typing = "*"
hexbytes = "*"
packaging = "*"
py-ecc = "==8.0.0"
pytz = "==2022.2.1"
typing_extensions = "<=4.15.0,>=3.10.0.2"
websocket_client = "<1,>=0.32.0"
toml = "==0.10.2"
pytest-asyncio = "*"
eth-utils = "==5.3.0"
eth-abi = "==5.2.0"
pycryptodome = "==3.20.0"
pytest = "==8.4.2"
jsonschema = ">=4.23.0,<5.0.0"
openapi-core = "==0.22.0"
openapi-spec-validator = "<0.8.0,>=0.7.0"
pyinstaller = "==6.19.0"
pydantic = "^2.11.9"

[tool.poetry.dependencies.tomte]
version = "==0.6.2"
extras = ["cli", "tests"]
