[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[project]
name = "funds-manager"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    # OA / open-aea / plugins — pinned exactly (framework contract).
    "open-autonomy[all]==0.21.19",
    "open-aea-ledger-ethereum==2.2.1",
    "open-aea-ledger-cosmos==2.2.1",
    "open-aea-test-autonomy==0.21.19",
    "open-aea-cli-ipfs==2.2.1",
    "open-aea-helpers==0.21.19",
    # Framework/lib deps — ranges (funds-manager ships a skill library, not an app).
    "requests>=2.32.5",
    "grpcio==1.78.0",
    "asn1crypto<1.5.0,>=1.4.0",
    "protobuf>=5,<6",
    "hypothesis>=6",
    "ecdsa>=0.15",
    "pytest>=8,<10",
    "pytest-asyncio>=1.3",
    # Third-party YAML deps (declared in abstract_round_abci/http_client).
    "aiohttp<4.0.0,>=3.8.5",
    "certifi",
    "multidict",
    "py-ecc<10,>=8",
    # funds_manager skill runtime deps (actual imports in packages/).
    "web3<8,>=7.0.0",
    "w3multicall>=0.3.1",
    "pydantic>=2.11.9,<3",
    "pip>=24.0",
]

[project.urls]
Repository = "https://github.com/valory-xyz/funds-manager"

[dependency-groups]
dev = [
    "tomte[cli, tests]>=0.6.5",
]

[tool.uv]
default-groups = "all"
prerelease = "allow"

[tool.uv.build-backend]
module-name = ["packages"]
module-root = ""
